added external links to CV

--- a/html/cv.html
+++ b/html/cv.html
@@ -28,7 +28,13 @@
                         Sectors: <i>Social work, Fast-Moving Consumer Goods (FMCG) manufacturing, Research</i>
                     </p>
                     <h3><span class="material-symbols-outlined" aria-hidden="true">design_services</span>UX Designer (Current role)</h3>
-                    <p>&emsp;<i>Children and Family Court Advisory and Support Service (Cafcass)</i></p>
+                    <p>&emsp;
+                        <i>
+                            <a target="_blank" href="https://www.gov.uk/government/organisations/children-and-family-court-advisory-and-support-service">
+                                Children and Family Court Advisory and Support Service (Cafcass) <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
+                            </a>
+                        </i>
+                    </p>
                     <ul>
                         <li>Designing new and amended ChildFirst CMS features using Figma and the Material design system.</li>
                         <li>Collaborating with users, external/internal stakeholders, and a third-party development team to ensure requirements are discovered, designed for, and developed accordingly.</li>
@@ -39,7 +45,11 @@
                     <br>
 
                     <h3><span class="material-symbols-outlined" aria-hidden="true">terminal</span>IT Officer / Junior Software Developer</h3>
-                    <p>&emsp;<i>UK-based moulded packaging manufacturer</i></p>
+                    <p>&emsp;
+                        <i>
+                            UK-based moulded packaging manufacturer
+                        </i>
+                    </p>
                     <ul>
                         <li>Designed and developed a web-based Overall Equipment Efficiency (OEE) reporting app using Adobe XD, Microsoft Server Studio, and C# .NET Core.</li>
                         <li>Procured and deployed programmable Zebra label printers to enable future automation, quality control tracing, and production reporting.</li>
@@ -52,7 +62,13 @@
                     <br>
 
                     <h3><span class="material-symbols-outlined" aria-hidden="true">biotech</span>Co-Founder, Generalist</h3>
-                    <p>&emsp;<i>Dreaming Spires</i></p>
+                    <p>&emsp;
+                        <i>
+                            <a target="_blank" href="https://dreamingspires.dev/">
+                                Dreaming Spires <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
+                            </a>
+                        </i>
+                    </p>
                     <ul>
                         <li>Project-managed several open-source software for research projects.</li>
                         <li>Conducted thorough requirements capture, user interviews, and interface design where applicable.</li>
