--- a/html/cv.html
+++ b/html/cv.html
@@ -36,11 +36,11 @@
                         </i>
                     </p>
                     <ul>
-                        <li>Designing new and amended ChildFirst CMS features using Figma and the Material design system.</li>
-                        <li>Collaborating with users, external/internal stakeholders, and a third-party development team to ensure requirements are discovered, designed for, and developed accordingly.</li>
-                        <li>Working as product-owner for Cafcass' corporate intranet, working toward business-owner objectives and information findability.</li>
-                        <li>Advocating for usability and accessibility according to Web Content Accessibility Guidelines (WCAG) in digital projects.</li>
-                        <li>Conducting business analysis between His Majesty's Court and Tribunal Service (HMCTS) and Cafcass on automation projects via Application Programming Interfaces (API).</li>
+                        <li><strong>Designing from end-to-end</strong> - working with users, stakeholders, and a third-party development team to ensure discovery, design, and development of solutions to users' requirements.</li>
+                        <li><strong>Prototyping with Figma</strong> - using components and icons from Google's Material design system to create prototypes for usability testing.</li>
+                        <li><strong>Improving findability</strong> - working as product-owner for Cafcass' corporate intranet to progress Communications' objectives and information findability.</li>
+                        <li><strong>Evangelizing for UX</strong> - ensuring internal projects consider established UX conventions, such as the Web Content Accessibility Guidelines (WCAG).</li>
+                        <li><strong>Conducting business analysis</strong> - liaising between His Majesty's Court and Tribunal Service (HMCTS) and Cafcass on API based automation projects.</li>
                     </ul>
                     <br>
 
