added Roboto everywhere

--- a/html/cv.html
+++ b/html/cv.html
@@ -6,8 +6,13 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
+
         <link rel="stylesheet" href="../css/style.css"/>
-        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
         <meta name="description" content="Elliott H.'s CV"/>
         <title>Elliott H.</title>
     </head>
@@ -40,7 +45,7 @@
                         <li><strong>Prototyping with Figma</strong> - using components and icons from Google's Material design system to create prototypes for usability testing.</li>
                         <li><strong>Improving findability</strong> - working as product-owner for Cafcass' corporate intranet to progress Communications' objectives and information findability.</li>
                         <li><strong>Evangelizing for UX</strong> - ensuring internal projects consider established UX conventions, such as the Web Content Accessibility Guidelines (WCAG).</li>
-                        <li><strong>Conducting business analysis</strong> - liaising between His Majesty's Court and Tribunal Service (HMCTS) and Cafcass on API based automation projects.</li>
+                        <li><strong>Conducting business analysis</strong> - working between His Majesty's Court and Tribunal Service (HMCTS) and Cafcass on API based automation projects.</li>
                     </ul>
                     <br>
 
