--- a/html/reaction.html
+++ b/html/reaction.html
@@ -8,6 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.ico"/>
         <link rel="stylesheet" href="../css/style.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <meta name="description" content="A collection of reaction images"/>
         <title>Reaction Images</title>
     </head>
