--- a/html/cv.html
+++ b/html/cv.html
@@ -29,8 +29,14 @@
                     </p>
                     <h2>Employment history</h2>
                     <p>
-                        Years of Experience: 2<br>
-                        Sectors: <i>Social work, Fast-Moving Consumer Goods (FMCG) manufacturing, Research</i>
+                        <strong>2 Years of Experience</strong>
+                        <br>
+                        <br>
+                        Sectors:
+                        <p><strong>&nbsp;&nbsp;&nbsp;Social work</strong></p>
+                        <p><strong>&nbsp;&nbsp;&nbsp;Manufacturing</strong></p>
+                        <p><strong>&nbsp;&nbsp;&nbsp;Research</strong></p>
+                        <br>
                     </p>
                     <h3><span class="material-symbols-outlined" aria-hidden="true">design_services</span>UX Designer (Current role)</h3>
                     <p>&emsp;
@@ -41,11 +47,11 @@
                         </i>
                     </p>
                     <ul>
-                        <li><strong>Designing from end-to-end</strong> - working with users, stakeholders, and a third-party development team to ensure discovery, design, and development of solutions to users' requirements.</li>
-                        <li><strong>Prototyping with Figma</strong> - using components and icons from Google's Material design system to create prototypes for usability testing.</li>
-                        <li><strong>Improving findability</strong> - working as product-owner for Cafcass' corporate intranet to progress Communications' objectives and information findability.</li>
-                        <li><strong>Evangelizing for UX</strong> - ensuring internal projects consider established UX conventions, such as the Web Content Accessibility Guidelines (WCAG).</li>
-                        <li><strong>Conducting business analysis</strong> - working between His Majesty's Court and Tribunal Service (HMCTS) and Cafcass on API based automation projects.</li>
+                        <li><strong>Designing from end-to-end</strong> - Working with users, stakeholders, and a third-party development team to ensure discovery, design, and development of solutions to users' requirements.</li>
+                        <li><strong>Prototyping with Figma</strong> - Using components and icons from Google's Material design system to create prototypes for usability testing.</li>
+                        <li><strong>Improving findability</strong> - Working as product-owner for Cafcass' corporate intranet to progress Communications' objectives and information findability.</li>
+                        <li><strong>Evangelizing for UX</strong> - Ensuring internal projects consider established UX conventions, such as the Web Content Accessibility Guidelines (WCAG).</li>
+                        <li><strong>Conducting business analysis</strong> - Working between His Majesty's Court and Tribunal Service (HMCTS) and Cafcass on API based automation projects.</li>
                     </ul>
                     <br>
 
@@ -56,13 +62,12 @@
                         </i>
                     </p>
                     <ul>
-                        <li>Designed and developed a web-based Overall Equipment Efficiency (OEE) reporting app using Adobe XD, Microsoft Server Studio, and C# .NET Core.</li>
-                        <li>Procured and deployed programmable Zebra label printers to enable future automation, quality control tracing, and production reporting.</li>
-                        <li>Designed a SQL database to replace paper, .docx, and .xlsx formatted product information.<br>
-                            This laid the groundwork for a Product Information System (PrInS) to centralise data about: versioned products, product packaging configurations, physical tooling (product molds), and corresponding machine settings.</li>
-                        <li>Investigated linear programming for optimal allocation of finite production resources by cost/gain, and staff by proficiency.</li>
-                        <li>Procured a stock control system to replace manual .xlsx formatted stock control.</li>
-                        <li>Advocated for improved working conditions and Health & Safety (H&S) standards in line with Health and Safety Executive (HSE) guidelines.</li>
+                        <li><strong>Designed and developed apps</strong> - Created a web-based Overall Equipment Efficiency (OEE) reporting app using Adobe XD, Microsoft Server Studio, and C# .NET Core.</li>
+                        <li><strong>Procured and deployed automation</strong> - Set up Zebra brand label-printers to enable future automation, quality control tracing, and production reporting.</li>
+                        <li><strong>Digitized paper processes</strong> - Designed a database for a product information system that would formalise paper, .docx, and .xlsx formatted product information and processes.<br></li>
+                        <li><strong>Researched optimal resource allocation</strong> - Studied linear programming techniques for allocating finite production resource and staff by proficiency over time.</li>
+                        <li><strong>Procured a stock control system</strong> - Replacing manual-input of .xlsx formatted stock control would reduce delivery failure.</li>
+                        <li><strong>Advocated for Health and Safety (H&S)</strong> - Promoted better working conditions for factory workers in line with Health and Safety Executive (HSE) guidelines.</li>
                     </ul>
                     <br>
 
@@ -75,11 +80,11 @@
                         </i>
                     </p>
                     <ul>
-                        <li>Project-managed several open-source software for research projects.</li>
-                        <li>Conducted thorough requirements capture, user interviews, and interface design where applicable.</li>
-                        <li>Delivered an online UX presentation and workshop at an  Alan Turing Institute event on Research Software Engineering (RSE).</li>
-                        <li>Prepared contracts and managed accounts for collaborators.</li>
-                        <li>Collaborated with various research institutions including: University of Cambridge, University of Oxford, Max Planck Institute Berlin, and Harvard Department of Anthropology.</li>
+                        <li><strong>Project managed software development</strong> - Delivered several paid Research Software Engineering (RSE) projects for research institutions.</li>
+                        <li><strong>Applied design methodologies</strong> - Conducted thorough requirements capture, user interviews, and interface design work where needed.</li>
+                        <li><strong>Spoke publicly about UX</strong> - Delivered an online UX presentation and workshop at an RSE event held by the Alan Turing Institute.</li>
+                        <li><strong>Account managed for collaborators</strong> - Prepared contracts and managed accounts for teams in need of our services.</li>
+                        <li><strong>Collaborated with leading institutions</strong> - Worked with research organisations including: University of Cambridge, University of Oxford, Max Planck Institute Berlin, and Harvard Department of Anthropology.</li>
                     </ul>
                     <br>
 
