--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -15,38 +15,82 @@
       href="https://fonts.gstatic.com"
       crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <meta name="description" content="Web dashboard" />
     <title>Dashboard</title>
   </head>
   <body>
+    <div id="datetime">
+      <h3 id="time"></h3>
+      <h3 id="date"></h3>
+      <script>
+        `use strict`;
+        function refreshTime() {
+          const time = document.getElementById("time");
+          const date = document.getElementById("date");
+          const d = new Date();
+          const ft = d.toLocaleTimeString();
+          const fd = d.toLocaleDateString();
+          time.textContent = ft;
+          date.textContent = fd;
+        }
+        setInterval(refreshTime, 1000);
+      </script>
+    </div>
     <div class="content">
       <div class="panel">
         <div class="panel-content">
-          <h2>Key links</h2>
           <h3>
-            <a href="https://www.messenger.com/">Messenger</a>
+            <span class="material-symbols-outlined">chat_bubble</span>
+            <a target="_blank" href="https://www.messenger.com/">Messenger</a>
           </h3>
           <h3>
-            <a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
+            <span class="material-symbols-outlined">travel_explore</span>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
           </h3>
           <h3>
-            <a href="https://mail.google.com/mail/u/0/">gMail</a>
+            <span class="material-symbols-outlined">mail</span>
+            <a target="_blank" href="https://mail.google.com/mail/u/0/">Gmail</a>
           </h3>
-          <br>
-          <h3 id="visits"></h3>
+          <h3>
+            <span class="material-symbols-outlined">psychology</span>
+            <a target="_blank" href="https://chat.openai.com/chat">ChatGPT</a>
+          </h3>
+        </div>
+      </div>
+      <div class="panel">
+        <div id="middle-panel" class="panel-content">
+          <h2 id="visits"></h2>
+          <p>
+            <i>Weniger aber besser</i>
+          </p>
         </div>
       </div>
       <div class="panel">
         <div class="panel-content">
-          <button id="ping" onclick="pingServers()">Ping Servers</button>
-          <div id="ping-panel"></div>
+          <h3>
+            <span class="material-symbols-outlined">timer</span>
+            <a target="_blank" href="https://www.google.com/search?q=15+minute+timer">15 min</a>
+          </h3>
+          <h3>
+            <span class="material-symbols-outlined">schedule</span>
+            <a target="_blank" href="https://www.google.com/search?q=30+minute+timer">½ an hour</a>
+          </h3>
+          <h3>
+            <span class="material-symbols-outlined">more_time</span>
+            <a target="_blank" href="https://www.google.com/search?q=45+minute+timer">45 minute</a>
+          </h3>
+          <h3>
+            <span class="material-symbols-outlined">hourglass_top</span>
+            <a target="_blank" href="https://www.google.com/search?q=60+minute+timer">1 hour</a>
+          </h3>
         </div>
       </div>
     </div>
   </body>
   <script>
     function cb(response) {
-      document.getElementById('visits').innerText = "Visit number: " + response.value;
+      document.getElementById('visits').innerText = "Visit " + response.value;
     }
   </script>
   <script async src="https://api.countapi.xyz/hit/elliotthuge.dev/visits?callback=cb"></script>
