--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/dashboard.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <script src="../script/ping.js"></script>
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
       crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?
+                family=Material+Symbols+Outlined:FILL" />
     <meta name="description" content="Web dashboard" />
     <title>Dashboard</title>
   </head>
